still not working! how long do i really want to spend on this??? like, how long has it been? a few days? too many days. so maybe dynamically resizing an image just doesn't work with basic html. i mean, i guess you probably need to refresh it. if it's not on a canvas. well, here, i'm just putting my trippy gif in the background. annoyingly, i'm having trouble clearing the circle, and i feel like i kind of fixed it at some point? but i can't remember where??? because i never took note of it in my commits??? so i just put that bit into clicknum, and suddenly it's working. i don't see how it could possibly be working, because it's not working how i would expect it to work!!! maybe i just needed to refresh more. well, whatever, it's kind of working, i'm out!!! oh wait, except now the page is too long. what the heck??? whatever, i'm just taking this as an excuse to add music. i wasn't planning on adding music, and i didn't have anything in mind, but... i'm feeling jean michel jarre!!!

--- a/cs100d/module2/calculator.css
+++ b/cs100d/module2/calculator.css
@@ -6,11 +6,14 @@ button{
     margin-right:auto;
     display:grid;
     grid-template-columns: 1fr 1fr 1fr;
-    height:400px;
     width:40%;
+    background-image: url('tenor.gif');
+    background-repeat: no-repeat;
+    padding-top:50px;
 }
 .title{
-    margin:auto;
+    margin-left:auto;
+    margin-right:auto;
 }
 .display-bg{
     height:20px;
